Partial display fixed: height: 100% ON, overflow: hidden OFF

--- a/day15-incrementing-counter/style.css
+++ b/day15-incrementing-counter/style.css
@@ -5,14 +5,16 @@
 }
 
 body{
+    /* margin: auto; */
     font-family: 'Roboto Mono', sans-serif;
     background-color: #8e44ad;
     color: white;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    overflow: hidden;
+    height: 100%;
+    /* overflow: hidden; */
     margin: 0;
 }
 
